# rae

./: .gitignore  ONE-PAGER.md  README.md  RESEARCH_LOG.md  pyproject.toml
docs/: LOG.md
reports/: results.md  status-overnight-2026-04-20.md
scripts/: launch_exp4_exp5.sh  launch_rule_arena_taxes.sh  setup_references.sh
src/rae/: __init__.py  activation_actor.py  actor_client.py  analyze.py  collect_advisability.py  collect_kdraft.py  compound_program.py  evaluator.py  gated_eval.py  gepa_adapter.py  probes.py  report.py  run_gepa.py  scorers.py  seed_prompts.py  seed_prompts_math.py  surface_features.py
src/rae/arenas/: __init__.py  math_zpd.py  rule_arena_taxes.py
tests/: conftest.py  test_collect_advisability.py  test_compound_program.py  test_evaluator.py  test_gated_eval.py  test_gepa_adapter.py  test_probes.py  test_surface_features.py
