[project]
name = "reflective-advisor-evolution"
version = "0.1.0"
description = "GEPA-evolved Actor-Advisor compound programs for black-box LLM steering on RuleArena Taxes."
requires-python = ">=3.10"
dependencies = [
    "gepa>=0.0.6",
    "openai>=1.40.0",
    "litellm>=1.50.0",
    "pydantic>=2.5.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "pytest>=7.4",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rae"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
markers = [
    "live: requires a running OpenAI-compatible vLLM endpoint (set RAE_LIVE=1)",
    "slow: long-running",
]
